# scanr

./: .editorconfig  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  demo.tape
.github/workflows/: admin.yml  crates.yml  docker.yml  publish.yml  release.yml
scripts/: release-version.sh
src/: main.rs  parse_arg.rs
src/port_descriptions/: mod.rs
src/scanner/: host_info.rs  mod.rs
src/terminal/: mod.rs  spinner.rs
